hphp/hack/test/typecheck/typedefs_generics_arity3.php.exp
File "typedefs_generics_arity3.php", line 5, characters 10-10:
The type \A expects 1 parameters (Typing[4102])
