hphp/hack/test/typecheck/typedefs_generics_arity3.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.
type A<T> = T;

type B = A;
